--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.datasource.username=root
 spring.datasource.password=Pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-server.port=8080
+server.port=9000
+
+! auth0.audience=http://localhost:9000/ 
+! auth0.domain=dev-b6zg662ux7gs8a28.eu.auth0.com
+! spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
