--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=TRUE
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jocdelset_ismael_llopart?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=TRUE
 spring.datasource.username=root
 spring.datasource.password=Pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=9000
 
-! auth0.audience=http://localhost:9000/ 
-! auth0.domain=dev-b6zg662ux7gs8a28.eu.auth0.com
-! spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
