--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
+#
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jocdelset_ismael_llopart?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=TRUE
+#spring.datasource.username=root
+#spring.datasource.password=Pass
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jocdelset_ismael_llopart?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=TRUE
-spring.datasource.username=root
-spring.datasource.password=Pass
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.mongodb.database=jocdelset_ismael_llopart
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
 
 server.port=9000
 
